--- a/osa0/0.4_uusi_muistiinpano.md
+++ b/osa0/0.4_uusi_muistiinpano.md
@@ -1,3 +1,4 @@
+```mermaid
 sequenceDiagram
     participant browser
     participant server
@@ -32,3 +33,4 @@ sequenceDiagram
     deactivate server
 
     Note right of browser: Browser renders the updated notes
+```
